--- a/flexblog-html/index.html
+++ b/flexblog-html/index.html
@@ -57,10 +57,10 @@
         </p>
       </div>
       <div class="sobre-img">
-        <img src="img/sobre1.jpg" alt="Sobre 1" />
+        <img class="sobre-img1" src="img/sobre1.jpg" alt="Sobre 1" />
       </div>
       <div class="sobre-img">
-        <img src="img/sobre2.jpg" alt="Sobre 2" />
+        <img class="sobre-img1" src="img/sobre2.jpg" alt="Sobre 2" />
       </div>
     </section>
 
@@ -69,21 +69,21 @@
       <div class="produtos-container">
         <div class="produtos-item purple">
           <h2>Purple</h2>
-          <img src="img/produtos1.jpg" alt="Produtos 1" />
+          <img  class="produtos-img1" src="img/produtos1.jpg" alt="Produtos 1" />
         </div>
         <div class="produtos-item pink">
           <h2>Pink</h2>
-          <img src="img/produtos2.jpg" alt="Produtos 2" />
+          <img class="produtos-img1" src="img/produtos2.jpg" alt="Produtos 2" />
         </div>
         <div class="produtos-item blue">
           <h2>Blue</h2>
-          <img src="img/produtos3.jpg" alt="Produtos 3" />
+          <img class="produtos-img1" src="img/produtos3.jpg" alt="Produtos 3" />
         </div>
       </div>
     </section>
 
     <section class="preco" id="preco">
-      <div class="preco-item">
+      <div class="preco-item purple1">
         <h2>Cobre</h2>
         <span><sup>R$</sup>19,00</span>
         <ul>
@@ -95,7 +95,7 @@
         <a href="#">Comprar</a>
       </div>
 
-      <div class="preco-item">
+      <div class="preco-item pink1">
         <h2>Prata</h2>
         <span><sup>R$</sup>39,00</span>
         <ul>
@@ -108,7 +108,7 @@
         <a href="#">Comprar</a>
       </div>
 
-      <div class="preco-item">
+      <div class="preco-item blue1">
         <h2>Ouro</h2>
         <span><sup>R$</sup>49,00</span>
         <ul>
@@ -119,7 +119,7 @@
           <li>Compra Exclusiva</li>
           <li>Download dos Items</li>
         </ul>
-        <a href="#">Comprar</a>
+        <a class="blue" href="#">Comprar</a>
       </div>
     </section>
 
