--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="flexblog-html/css/style.css" />
     <title>FlexBlog</title>
   </head>
   <body>
@@ -57,10 +57,10 @@
         </p>
       </div>
       <div class="sobre-img">
-        <img class="sobre-img1" src="img/sobre1.jpg" alt="Sobre 1" />
+        <img class="sobre-img1" src="flexblog-html/img/sobre1.jpg" alt="Sobre 1" />
       </div>
       <div class="sobre-img">
-        <img class="sobre-img1" src="img/sobre2.jpg" alt="Sobre 2" />
+        <img class="sobre-img1" src="flexblog-html/img/sobre2.jpg" alt="Sobre 2" />
       </div>
     </section>
 
@@ -69,15 +69,15 @@
       <div class="produtos-container">
         <div class="produtos-item purple">
           <h2>Purple</h2>
-          <img  class="produtos-img1" src="img/produtos1.jpg" alt="Produtos 1" />
+          <img  class="produtos-img1" src="flexblog-html/img/produtos1.jpg" alt="Produtos 1" />
         </div>
         <div class="produtos-item pink">
           <h2>Pink</h2>
-          <img class="produtos-img1" src="img/produtos2.jpg" alt="Produtos 2" />
+          <img class="produtos-img1" src="flexblog-html/img/produtos2.jpg" alt="Produtos 2" />
         </div>
         <div class="produtos-item blue">
           <h2>Blue</h2>
-          <img class="produtos-img1" src="img/produtos3.jpg" alt="Produtos 3" />
+          <img class="produtos-img1" src="flexblog-html/img/produtos3.jpg" alt="Produtos 3" />
         </div>
       </div>
     </section>
